# SOFO

./: .gitignore  .ocamlformat  README.md  forward-torch.opam  ppx-forward-torch.opam  sketch2  sofo.opam
bayes_opt_examples/: bayes_opt_common.ml  bit_flipflop_small_net.ml  delayed_addition.ml  dune  kalman_rnn.ml  linear_regression.ml  lorenz.ml  mlp_classification.ml  mlp_mixer.ml  random_class.ml
docs/: index.html  sherlodoc.js
docs/forward-torch/: db.js  index.html
docs/forward-torch/Forward_torch/: index.html
docs/forward-torch/Forward_torch/Maths/: index.html
docs/forward-torch/Forward_torch/Prms/: index.html
docs/forward-torch/Forward_torch/Prms/Array/: index.html
docs/forward-torch/Forward_torch/Prms/Array/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/Array/M/: index.html
docs/forward-torch/Forward_torch/Prms/Array/T/: index.html
docs/forward-torch/Forward_torch/Prms/Array/argument-1-P/: index.html
docs/forward-torch/Forward_torch/Prms/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/List/: index.html
docs/forward-torch/Forward_torch/Prms/List/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/List/M/: index.html
docs/forward-torch/Forward_torch/Prms/List/T/: index.html
docs/forward-torch/Forward_torch/Prms/List/argument-1-P/: index.html
docs/forward-torch/Forward_torch/Prms/Make/: index.html
docs/forward-torch/Forward_torch/Prms/Make/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/Make/M/: index.html
docs/forward-torch/Forward_torch/Prms/Make/T/: index.html
docs/forward-torch/Forward_torch/Prms/Make/argument-1-B/: index.html
docs/forward-torch/Forward_torch/Prms/None/: index.html
docs/forward-torch/Forward_torch/Prms/None/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/None/M/: index.html
docs/forward-torch/Forward_torch/Prms/None/T/: index.html
docs/forward-torch/Forward_torch/Prms/Option/: index.html
docs/forward-torch/Forward_torch/Prms/Option/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/Option/M/: index.html
docs/forward-torch/Forward_torch/Prms/Option/T/: index.html
docs/forward-torch/Forward_torch/Prms/Option/argument-1-P/: index.html
docs/forward-torch/Forward_torch/Prms/P/: index.html
docs/forward-torch/Forward_torch/Prms/P/Let_syntax/: index.html
docs/forward-torch/Forward_torch/Prms/Pair/: index.html
docs/forward-torch/Forward_torch/Prms/module-type-Basic/: index.html
docs/forward-torch/Forward_torch/Prms/module-type-Ops/: index.html
docs/forward-torch/Forward_torch/Prms/module-type-T/: index.html
docs/ppx-forward-torch/: db.js  index.html
docs/ppx-forward-torch/Ppx_forward_torch/: index.html
docs/ppx-forward-torch/Ppx_forward_torch/Ppx_prms/: index.html
docs/sofo/: db.js  index.html
docs/sofo/Sofo/: index.html
docs/sofo/Sofo/Convenience/: index.html
docs/sofo/Sofo/Loss/: index.html
docs/sofo/Sofo/Loss/CE/: index.html
docs/sofo/Sofo/Loss/MSE/: index.html
docs/sofo/Sofo/Loss/RL_loss/: index.html
docs/sofo/Sofo/Loss/Weighted_MSE/: index.html
docs/sofo/Sofo/Loss/module-type-Reward/: index.html
docs/sofo/Sofo/Loss/module-type-T/: index.html
docs/sofo/Sofo/Optimizer/: index.html
docs/sofo/Sofo/Optimizer/Adam/: index.html
docs/sofo/Sofo/Optimizer/Config/: index.html
docs/sofo/Sofo/Optimizer/FGD/: index.html
docs/sofo/Sofo/Optimizer/SGD/: index.html
docs/sofo/Sofo/Optimizer/SOFO/: index.html
docs/sofo/Sofo/Optimizer/module-type-T/: index.html
docs/sofo/Sofo/Wrapper/: index.html
docs/sofo/Sofo/Wrapper/Feedforward/: index.html
docs/sofo/Sofo/Wrapper/Recurrent/: index.html
docs/sofo/Sofo/Wrapper/module-type-Function/: index.html
docs/sofo/Sofo/Wrapper/module-type-Recurrent_function/: index.html
docs/sofo/Sofo/Wrapper/module-type-T/: index.html
examples/: ae.ml  arm_ilqr.ml  bayes_opt.ml  bit_flipflop_common.ml  bit_flipflop_force.ml  bit_flipflop_guillaume.ml  bit_flipflop_small_net.ml  cifar.ml  delayed_addition.ml  dune  e_plot.ml  fa.ml  fa_marginal.ml  hvs.ml  kalman_data.ml  kalman_rnn.ml  kalman_rnn_no_gain.ml  lds_data.ml  lds_typ.ml  learn_ggn.ml  lgs.ml  lgs_check.ml  lgs_done_right.ml  lgs_elbo.ml  lgs_elbo_gru.ml  lgs_elbo_laplace.ml  lgs_elbo_simplified.ml  lgs_from_scratch.ml  lgs_min.ml  linear_regression.ml  lorenz.ml  lorenz_common.ml  lorenz_elbo_bottleneck.ml  lorenz_elbo_bottleneck_kronecker.ml  lorenz_elbo_gru.ml  lorenz_elbo_mgu_kronecker.ml  lorenz_elbo_mgu_kronecker_no_sep_init.ml  lorenz_elbo_mgu_kronecker_no_sep_init_diag.ml  lorenz_ilqr.ml  lorenz_mgu_spike_no_sep_init.ml  (+16 more)
forward-torch/: dune  forward_torch.ml  index.mld  lqr.ml  lqr.mli  lqr_typ.ml  lqr_type.ml  lqt.ml  lqt.mli  lqt_type.ml  maths.ml  maths.mli  maths_typ.ml  prms.ml  prms.mli  prms_typ.ml  reverse.ml  reverse.mli
forward-torch/test/: dune  lds_data.ml  test_maths.ml
ggn_common/: dune  ggn_common.ml  ggn_common.mli  spec_typ.ml
ilqr/: dune  ilqr.ml  ilqr.mli
jax/: api.py  cifar10.py  lorenz.py  mlp_mixer.py  mnist.py
lib/: convenience.ml  dune  loss.ml  loss.mli  loss_typ.ml  optimizer.ml  optimizer.mli  optimizer_typ.ml  wrapper.ml  wrapper.mli  wrapper_typ.ml
lqr/: dune  lqr.ml  lqr.mli  lqr_typ.ml
motor_task/double_reach/: analysis.ml  double_reach_common.ml  dune  train.ml
motor_task/motor/: arm.ml  dune  loss.ml  rnn.ml  rnn.mli  rnn_typ.ml
motor_task/single_reach/: analysis.ml  dune  single_reach_common.ml  train.ml
ppx-forward-torch/: dune  ppx_prms.ml
pytorch/: api.py  lorenz.py  mnist.py
sofo/: convenience.ml  dune  index.mld  loss.ml  loss.mli  loss_typ.ml  optimizer.ml  optimizer.mli  optimizer_typ.ml  sofo.ml  wrapper_typ.ml
svgp/: dune  svgp.ml
tests/: dummy.ml  dummy2.ml  dune  lds_data.ml  lqr.ml  lqr_common.ml  maths.ml  test_lqr.ml  test_lqr_implicit.ml  test_lqr_vae.ml  test_lqr_vae_elbo.ml  test_lqr_vae_elbo_simplified.ml  test_maths.ml  test_mgu.ml
tests/framework/: dune  framework.ml
(+82 files in other folders)
