opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Hennequin Lab" ]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {build & >= "2.0.0"}
  "ppxlib" {>= "0.26.0"}
  "forward-torch"
]
synopsis: "Ppx that derives Prms.T functors from record type definitions"
