opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Guillaume Hennequin, Youjing Yu" ]
license: "MIT"
homepage: "https://github.com/hennequin-lab/sgn"
dev-repo: "git+https://github.com/hennequin-lab/sgn.git"
bug-reports: "https://github.com/hennequin-lab/sgn/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {build & >= "1.1.0"}
  "torch"
  "forward-torch"
  "ppx-forward-torch"
  "ppx_sexp_message"
]
synopsis: ""
