opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Guillaume Hennequin, Youjing Yu" ]
synopsis: "Second-order Forward Mode Differentiation"
license: "MIT"
homepage: "https://github.com/hennequin-lab/SOFO"
dev-repo: "git+https://github.com/hennequin-lab/SOFO.git"
bug-reports: "https://github.com/hennequin-lab/SOFO/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {build & >= "1.1.0"}
  "torch"
  "forward-torch"
  "ppx-forward-torch"
  "ppx_sexp_message"
]

