(executables
 (names
  linear_regression
  delayed_addition
  bit_flipflop_small_net
  lorenz
  random_class
  mlp_classification
  mlp_mixer
  kalman_rnn)
 (libraries cmdargs domainslib bos sofo owl owl-ode lqr ilqr svgp)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
