(executables
 (names
  linear_regression
  lqr_eg
  lorenz_ilqr
  arm_ilqr
  delayed_addition
  lorenz
  lorenz_elbo_mgu_kronecker
  ; lorenz_elbo_mgu_kronecker_no_sep_init
  ; lorenz_elbo_mgu_kronecker_no_sep_init_diag
  lorenz_mgu_spike_no_sep_init
  bit_flipflop_force
  bit_flipflop_small_net
  kalman_rnn
  mlp_classification
  mlp_mixer
  random_class
  svgp_regression)
 (libraries cmdargs domainslib bos sofo owl owl-ode lqr ilqr svgp)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
