(executables
 (names
  linear_regression
  bit_flipflop_guillaume
  bit_flipflop_small_net
  kalman_rnn_no_gain
  delayed_addition
  hvs
  random_class
  mlp_classification
  lorenz
  lgs
  lgs_elbo
  lgs_from_scratch
  fa
  mlp_adaptive
  mlp_mixer
  learn_ggn
  vae)
 (libraries cmdargs bos sofo owl domainslib owl-ode framework lqr)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch ppx_jane)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
