(executables
 (names
  bit_flipflop_small_net
  linear_regression
  lorenz
  delayed_addition
  kalman_rnn
  mlp_classification
  mlp_mixer
  random_class)
 (libraries cmdargs domainslib bos sofo owl owl-ode ggn_common)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch ppx_jane)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
