(library
 (name forward_torch)
 (modules maths_typ maths)
 (inline_tests)
 (public_name forward-torch)
 (libraries stdio base torch npy)
 (preprocess
  (pps ppx_sexp_message ppx_jane)))

(documentation
  (package forward-torch)
  (mld_files index))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
