(library
 (name sofo)
 (public_name sofo)
 (modules sofo convenience loss optimizer_typ optimizer wrapper_typ)
 (libraries stdio base forward-torch owl)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch)))

(documentation
 (package sofo)
 (mld_files index))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
