(executables
 (names
  test_maths
  test_lqr
  test_lqr_implicit
  test_lqr_vae
  test_lqr_vae_elbo
  test_lqr_vae_elbo_simplified
  test_mgu)
 (libraries framework lqr owl alcotest sofo)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
