(library
 (name single_reach_common)
 (modules single_reach_common)
 (libraries motor)
 (preprocess
  (pps ppx_sexp_message ppx-forward-torch)))

(executable
 (name train)
 (modules train)
 (libraries single_reach_common)
 (preprocess
  (pps ppx_jane ppx_sexp_message ppx-forward-torch)))

(executable
 (name analysis)
 (modules analysis)
 (libraries single_reach_common)
 (preprocess
  (pps ppx_jane ppx_sexp_message ppx-forward-torch)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
